--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -39,13 +39,6 @@ on init
     # Wait until TEE is ready
     wait_for_prop vendor.sys.listeners.registered true
 
-    # Boot-time fs tuning
-    write /sys/block/sda/queue/iostats 0
-    write /sys/block/sda/queue/nr_requests 256
-    write /sys/block/sde/queue/iostats 0
-    write /sys/block/sde/queue/nr_requests 256
-    setprop sys.io.scheduler "cfq"
-
     write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
 
     # Disable UFS powersaving
@@ -151,6 +144,9 @@ on init
     chown cameraserver cameraserver /dev/cpuset/camera-daemon/tasks
     chmod 0660 /dev/cpuset/camera-daemon/tasks
 
+    # ZRAM Space Kernel
+    write /proc/sys/vm/page-cluster 0
+
 on fs
     mount_all /vendor/etc/fstab.qcom
     swapon_all /vendor/etc/fstab.qcom
@@ -176,15 +172,6 @@ on property:sys.boot_completed=1
     # Enable UFS powersaving
     write /sys/devices/soc/1da4000.ufshc/clkscale_enable 1
     write /sys/devices/soc/1da4000.ufshc/clkgate_enable 1
-
-    # Post-boot fs tuning
-    write /sys/block/sda/queue/iostats 1
-    write /sys/block/sda/queue/nr_requests 128
-    write /sys/block/sda/queue/read_ahead_kb 128
-    write /sys/block/sde/queue/iostats 1
-    write /sys/block/sde/queue/nr_requests 128
-    write /sys/block/sde/queue/read_ahead_kb 128
-    setprop sys.io.scheduler "bfq"
 
     write /dev/cpuset/top-app/cpus 0-7
     write /dev/cpuset/foreground/cpus 0-3,6-7
